Add support for topic patterns (#61)